Add a bit of documentation in readme.txt on the communication methods used by the implementation. Clean up gameroom_example.cfg a bit.

--- a/gameroom_example.cfg
+++ b/gameroom_example.cfg
@@ -56,7 +56,7 @@ username = bot_example
 # gameroom password
 password = botspassword
 
-# Method of communicating with the bot
+# Method of communicating with the bot, options are stdio and socket.
 communication_method = stdio
 
 # command to run bot
@@ -67,7 +67,7 @@ greeting = Hi. I'm just a bot so don't try chatting with me.
     My handler is example writer. If you encounter any problems please notify <email address>
     Thank you for playing me and enjoy the game.
 
-# default timecontrol to start games at
+# timecontrol to start games at
 #timecontrol = 30s/3/100/5/8
 timecontrol = 60s/5m/75/0/4h/4m
 #timecontrol = 1d/60d/100/0/300d/21d
@@ -81,8 +81,8 @@ ponder = True
 
 # options starting with bot_ are sent to configure the bot before starting play
 # Size in MB for transition table
-bot_hash = 500
+bot_hash = 200
 
-# Maximum depth to search; in steps. (cannot be set below 4)
+# Maximum depth to search; in steps.
 # bot_depth = 8
 
