Add ability to send options to the engine after the position has been sent in analyze.py

--- a/analyze_example.cfg
+++ b/analyze_example.cfg
@@ -8,3 +8,7 @@ communication_method = stdio
 
 cmdline = ./simple_engine.py
 
+# options in a bot section starting with bot_ will be sent to the engine during
+# initialization, options starting with post_pos_ will be sent after the
+# position has been set up
+
