Add a little better logging to roundrobin.py and make it configurable

--- a/roundrobin_example.cfg
+++ b/roundrobin_example.cfg
@@ -2,6 +2,10 @@
 # number of rounds to run
 rounds = 100
 
+# verbosity of the output default is WARN
+# options are DEBUG, INFO, WARN, ERROR
+loglevel = WARN
+
 # timecontrol to use or None
 timecontrol = 3s/30s/100/60s/10m
 
