Add ability for roundrobin.py to write Bayeselo compatible pgn file (Thanks to Jeff Bacher) Change method engines are killed under windows to account for running through a shell Make the normal engine shutdown in roundrobin.py a little more robust

--- a/roundrobin_example.cfg
+++ b/roundrobin_example.cfg
@@ -6,6 +6,12 @@ rounds = 100
 # options are DEBUG, INFO, WARN, ERROR
 loglevel = WARN
 
+# Write a Bayeselo compatible pgn file
+write_pgn = False
+
+# Filename to use for pgn file
+pgn_filename = result.pgn
+
 # timecontrol to use or None
 timecontrol = 3s/30s/100/60s/10m
 
