Add option to disable strict legality checking of setup moves

--- a/roundrobin_example.cfg
+++ b/roundrobin_example.cfg
@@ -15,6 +15,9 @@ pgn_filename = result.pgn
 # timecontrol to use or None
 timecontrol = 3s/30s/100/60s/10m
 
+# don't check legality of setup moves, useful for handicap games
+# strict_setup = False
+
 # bots to use for tournament
 bots = random opfor
 
