Add ability to specify per bot time controls in roundrobin.py

--- a/roundrobin_example.cfg
+++ b/roundrobin_example.cfg
@@ -32,6 +32,11 @@ cmdline = python simple_engine.py
 # command line
 cmdline = ../opfor/bot_opfor
 
+# separate time controls can be given to each bot
+# care should be taken with the game length limit as differing limits
+# can give unexpected results
+# timecontrol = 15s/30s/100/0/10m
+
 # option to send to just this bot
 bot_depth = 6
 
