Add a better description for gameroom interface console output setting

--- a/gameroom_example.cfg
+++ b/gameroom_example.cfg
@@ -29,7 +29,13 @@ directory = ./logs
 #   Error
 level = Debug
 
-# log to the console (stdout) or not
+# Output to the console or not. Unless the interface is being run in an
+# environment where it specifically should not write *anything* to stdout
+# or stderr this should be left set to True. If you just want to stop seeing
+# most of the output from the interface it is almost certainly better to set
+# the 'console_level' below to either the Warning or Error level.
+# Setting this to False will stop even error messages from being reported on
+# the console.
 console = True
 
 # console log level
