Make strict legality checking configurable in analyze.py. Original patch by JDB.

--- a/analyze_example.cfg
+++ b/analyze_example.cfg
@@ -2,6 +2,13 @@
 # bot section to use
 default_engine = bot_simple
 
+# Uncomment to do full legality checking of moves.
+# strict_checks = True
+
+# Set the following to True or False to enable or disable strict checks of
+# the setup moves. Overides the strict_checks setting for the rest of the moves.
+# strict_setup = True
+
 [bot_simple]
 
 communication_method = stdio
