add min_time_left for roundrobin

--- a/roundrobin_example.cfg
+++ b/roundrobin_example.cfg
@@ -1,4 +1,7 @@
 [global]
+# Time left on the clock when bot controller will try to force the bot to reply
+min_time_left = 9
+
 # number of rounds to run
 rounds = 100
 
