Default to roundrobin not having min_time_left set

--- a/roundrobin_example.cfg
+++ b/roundrobin_example.cfg
@@ -1,6 +1,7 @@
 [global]
 # Time left on the clock when bot controller will try to force the bot to reply
-min_time_left = 9
+# default is to not send a stop command and just let the bot go on its own
+# min_time_left = 9
 
 # number of rounds to run
 rounds = 100
