Incorporate better usage documentation written by Leon Messerschmidt.

--- a/analyze_example.cfg
+++ b/analyze_example.cfg
@@ -6,7 +6,7 @@ default_engine = bot_simple
 # strict_checks = True
 
 # Set the following to True or False to enable or disable strict checks of
-# the setup moves. Overides the strict_checks setting for the rest of the moves.
+# the setup moves. Overides the strict_checks setting for the setup moves.
 # strict_setup = True
 
 [bot_simple]
