--- a/roundrobin_example.cfg
+++ b/roundrobin_example.cfg
@@ -23,18 +23,21 @@ timecontrol = 3s/30s/100/60s/10m
 # strict_setup = False
 
 # bots to use for tournament
-bots = random opfor
+bots = random randomer
 
 # options to send to all bots
 bot_hash = 50
 
 [Random]
 # command line
-cmdline = python simple_engine.py
+cmdline = simple_engine
+
+[Randomer]
+cmdline = simple_engine
 
 [OpFor]
 # command line
-cmdline = ../opfor/bot_opfor
+cmdline = bot_opfor
 
 # separate time controls can be given to each bot
 # care should be taken with the game length limit as differing limits
