Rework analyze argument and configuration handling. Also add a few more options and a basic test.

--- a/analyze_example.cfg
+++ b/analyze_example.cfg
@@ -9,11 +9,14 @@ default_engine = bot_simple
 # the setup moves. Overides the strict_checks setting for the setup moves.
 # strict_setup = True
 
+# Log level can be ERROR, WARNING, INFO or DEBUG
+# log_level = INFO
+
 [bot_simple]
 
 communication_method = stdio
 
-cmdline = ./simple_engine.py
+cmdline = simple_engine
 
 # options in a bot section starting with bot_ will be sent to the engine during
 # initialization, options starting with post_pos_ will be sent after the
