Rework roundrobin option and config handling.

--- a/roundrobin_example.cfg
+++ b/roundrobin_example.cfg
@@ -1,20 +1,18 @@
 [global]
 # Time left on the clock when bot controller will try to force the bot to reply
 # default is to not send a stop command and just let the bot go on its own
-# min_time_left = 9
+# stop_time = 9
 
 # number of rounds to run
 rounds = 100
 
-# verbosity of the output default is WARN
+# verbosity of the logging output
 # options are DEBUG, INFO, WARN, ERROR
 loglevel = WARN
 
-# Write a Bayeselo compatible pgn file
-write_pgn = False
-
 # Filename to use for pgn file
-pgn_filename = result.pgn
+# uncomment to enable pgn writing
+# pgn_filename = result.pgn
 
 # timecontrol to use or None
 timecontrol = 3s/30s/100/60s/10m
