Add option to send network logging to a separate file. Minor adjustments to network timeouts and logging.

--- a/gameroom_example.cfg
+++ b/gameroom_example.cfg
@@ -46,6 +46,9 @@ console_level = Debug
 # this is a large amount of data
 net_level = Info
 
+# Send the network logging to a separate file.
+separate_net_log = False
+
 # level to log messages from the bot engine
 engine_level = Debug
 
