Allow gameroom login information to be set globally in gameroom.cfg

--- a/gameroom_example.cfg
+++ b/gameroom_example.cfg
@@ -14,6 +14,12 @@ run_dir = ./running
 # Maximum number of bots that can be active at one time
 max_bots = 1
 
+# gameroom username, can also be set in the individual bot section.
+username = bot_example
+
+# gameroom password
+password = botspassword
+
 # bot section to use
 default_engine = bot_example
 
@@ -59,12 +65,6 @@ aei_level = Info
 log_position = True
 
 [bot_example]
-# gameroom username
-username = bot_example
-
-# gameroom password
-password = botspassword
-
 # Method of communicating with the bot, options are stdio and socket.
 communication_method = stdio
 
