Allow bot section to be specified for a game in postal_controller.
Stop ignoring other responses while waiting for readyok in gameroom.py.

--- a/gameroom_example.cfg
+++ b/gameroom_example.cfg
@@ -95,3 +95,22 @@ bot_hash = 200
 # Maximum depth to search; in steps.
 # bot_depth = 8
 
+[postal]
+# This section is used by the postal_controller
+# You can set an alternate postal log filename
+#
+# log_file = differentpostal.log
+#
+# or directory
+#
+# log_dir = postal
+#
+# specific bot sections to use for a game id
+#
+# 123456 = bot_testbot2
+#
+# or opponent
+#
+# myoppenent = bot_testbot3
+#
+# can be set in order to use different settings for different games.
